fix last item hidden under bottom bar in mobile facet menu

--- a/themes/finna/less/bootstrap.less
+++ b/themes/finna/less/bootstrap.less
@@ -831,7 +831,6 @@ label.list-group-item {border-radius:0;font-weight:normal;margin-top:0;padding-l
 
 /* --- Sidebar --- */
 .sidebar {
- 
     .list-group:not(.filters) .title {
         margin-bottom: 5px;
         cursor:pointer;
@@ -1489,6 +1488,7 @@ ul.jstree-container-ul > li.jstree-node, .list-group.facet .list-group-item:not(
         overflow-y: scroll;
         padding-left: 0px;
         padding-right: 0px;
+        padding-bottom: 40px;
         &.open {
             top: 0%;
         }
